# repo_win32

./: .gitignore  Cargo.toml  README.md  home.json
.github/workflows/: build.yaml
db/: home.json
db/apps/: 0_don.clippy.json  0x4D44.mdmdview.json  115.115Chrome.json  123.123pan.json  1IC.BPMN_RPAStudio.json  2BrightSparks.UndeleteOnClick.json  360.360AlbumViewer.json  360.360Chrome.json  360.360CleanMaster.json  360.360DesktopLite.json  360.360DocProtect.json  360.360File.json  360.360VirtualVault.json  360.360Zip.json  360.PalmInput.json  3CX.CallFlowDesigner.json  3CX.MultilineTAPI.json  3CX.PhoneSystem.json  3CX.Softphone.json  3TSoftwareLabs.Robo3T.json  3d_io.Exr_IO.json  4gray.iptvnator.json  4nrry.OpenCherryDesktop.json  4tNiagaraSoftware.4tTrayMinimizer.json  5E.5EClient.json  63BeetleSmurf.PinnyNotes.json  64Gram.64Gram.json  66HEX.Frame.json  720kb.ndm.json  7S2P.Effie.json  7gxycn08.PyAutoActions.json  7room.Aya.json  7zip.7zip.Alpha.exe.json  7zip.7zip.Alpha.msi.json  7zip.7zip.json  8x8.QualityManagement.json  990aa.Kivixa.json  AAAInternetPublishing.WTFast.json  AAS.WorldWideTelescope.json  ABB.e_Design.json  (+7867 more)
db/dev/: winget
db/map/: 1.json
db/search/: 1.json
src/: main.rs
src/parser/: http.rs  mod.rs
