[package]
name = "astore-apps-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahqstore-types = { version = "3" }
async-recursion = "1"
content_disposition = "0.4"
reqwest = "0.12"
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
version-compare = "0.2"
